--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1043,15 +1043,15 @@
  tirupati_tirumala_temple_complex:0 "ティルパティ－ティルマラ寺院群"
  desc_tirupati_tirumala_temple_complex:0 "主要な寺院として、我々の国家が後援しているティルパティの複合体は、インドで最も偉大なものの一つへと成長した。寺院都市自体がこの地域の多くの村を支配しているという事実は、ここでの我々の収入をやや減らすことになるが、それは、寺院が我々の国家に与える素晴らしさによって補完されている。"
  flavor_vij.11.t:0 "タミル人交易組合"
- flavor_vij.11.d:0 "ヴィジャヤナガル帝国は、デカン高原のカンナダ語圏とテルグ語圏の乾燥した高地に軍事拠点を構え、常に南部のタミル国家に従う、賑やかな交易都市を維持するのに苦労していた。\n最も重要なタミル人の交易組合の多くを代表する使節は、彼らの古代の伝統と権利が尊重されることを要求するため、我々の首都にちょうど到着したところだ。\n彼らは小さな譲歩を求めるのではなく、むしろ自身を多かれ少なかれ思うようにさせておくことを聞くことを期待している。"
+ flavor_vij.11.d:0 "ヴィジャヤナガル帝国は、デカン高原のカンナダ語圏とテルグ語圏の乾燥した高地に軍事拠点を構えていたため、南部のタミル国家に従う賑やかな交易都市を維持するのにいつも苦労していた。\n最も重要なタミル人の交易組合の多くを代表する使節が、ちょうど我々の首都に到着し、古くからの伝統と権利を尊重するよう要求している。\n彼らは小さな譲歩を求めているのではなく、むしろ多かれ少なかれ自分たちの裁量に任せてよいという言葉を期待している。"
  flavor_vij.11.a:0 "我々は彼らに大きな自治率を許可することができる。"
  flavor_vij.11.b:0 "我々は、これらの小売商たちをきつく縛っておく必要がある。"
  flavor_vij.12.t:0 "ワドゥガの移住"
- flavor_vij.12.d:0 "我々の帝国の創設以来、テルグ人の定住者たちの安定した流れが、北部のテランガーナから南の我々の土地へと移住している。我々はこれまで、我々の帝国の貧しいものたちに開発するための土地を提供し、彼らの居留地の成長を助けるため、水のタンクを構築している。このようにして我々は陸軍の人的資源の健全で忠実な源を獲得してきた。\nしかし最近、これらの入植者（タミル人によりワドゥガとして知られている）は、タミル語圏のさらに南へと広がり始めた。タミル人の農業社会は、テルグ人の入植者が彼らの土地に移動するのを止めるよう声を上げている。"
+ flavor_vij.12.d:0 "我々の帝国の建国以来、絶えずテルグ人の開拓者が北部のテランガーナから南部の我々の土地へと移住してきた。我々はこれまで、人口のまばらな我が帝国の地域に開発するための土地を提供し、彼らの入植地の成長を助けるため、給水タンクを建設している。このようにして我々は軍隊のための健全で忠実な人的資源を獲得してきた。\nしかし最近、これらの入植者（タミル人によりワドゥガとして知られている）は、さらに南のタミル語圏へと広がり始めた。タミル人の農業社会は、テルグ人の入植者が彼らの土地に移動するのを止めるよう声を上げている。"
  flavor_vij.12.a:0 "抗議を無視しろ。"
  flavor_vij.12.b:0 "農家が自身の故郷を守るのを助ける。"
  flavor_vij.13.t:0 "チェラッパ・ナラシンハの台頭"
- flavor_vij.13.d:0 "自治権を持った我々のタミル人たちの領地の性質は、地元の有力者のための権力基盤を構築するのに最適な環境であった\nチェラッパとして知られるこの問題の人物は、将軍として働くことが許されるように要求しており、我々の帝国の内部機構の中で行動したいというのが真意のようだ。しかし、一般的に、この人物は、彼の野望として、軍隊内の地位よりもはるかに高い目標が設定されるべきだと考えている。彼を政治的に孤立させようと試み、彼が求める名誉を否定するのは簡単だが、我々は経済的な中核地域の多くを支配している人と、自身とを隔てる危険を冒すことになる。\n一方で、おそらく多くが避けられないと感じている紛争を長引かせる代わりに、今、彼を攻撃することが最も賢明であろう。"
+ flavor_vij.13.d:0 "我々のタミル人の領地の自治的な性質は、地元の有力者にとって権力基盤を構築するのに最適な環境であった。\nチェラッパとして知られるこの問題の人物は、将軍として勤務することを許可するよう要求しており、我々の帝国の内部機構の中で行動したいというのが真意のようだ。しかし、一般的に、この人物は、彼ほどの野望ならば、軍隊内の地位よりもはるかに高い目標に目を向けているに違いないと考えられている。彼が求める名誉を否定し、政治的に孤立させようとするのは簡単だが、経済的な中核地域の多くを支配している人物から距離を置いてしまうのは危険を冒すことになる。\n一方で、おそらく多くの者が避けられないと感じている紛争を長引かせるのではなく、今、彼を攻撃してしまうことが最も賢明かもしれない。"
  flavor_vij.13.a:0 "友は近くに置いておけ。だが敵はもっと近くに置いておけ。"
  flavor_vij.13.b:0 "彼の影響力をタミル人の権力基盤に制限するよう試みる。"
  flavor_vij.13.c:0 "彼があまりにも強くなる前に鎮圧するため、今、攻撃を行う。"
