--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1561,8 +1561,8 @@
  incident_burgundian_succ_emp:0 "ブルゴーニュの継承"
  incident_burgundian_succ_strong_ally:0 "ブルゴーニュの継承"
  incident_burgundian_succ_alone:0 "ブルゴーニュの継承"
- incident_hungary_mission_emperor_alert:0 "ハンガリーとボヘミアの王国を[Hungary.Monarch.GetTitle][Hungary.Monarch.GetName]の下で統一したハンガリー人は、[Emperor.Monarch.GetTitle][Emperor.Monarch.GetName]に対し、[Emperor.Monarch.GetHerHis]の神聖ローマ帝国皇帝としての権限で、帝国への加盟を認めるよう請願した。さらに、彼らは、ボヘミアは彼らのより大きな領土の一部に過ぎないので、ボヘミアの選帝侯位はハンガリーの[Hungary.Monarch.Dynasty.GetName]王朝に正式に移行されるべきだと主張している。"
- incident_hungary_mission_member_alert:0 "ハンガリー王国とボヘミアを[Hungary.Monarch.GetTitle][Hungary.Monarch.GetName]の下で統一したハンガリー人は、[Emperor.Monarch.GetTitle][Emperor.Monarch.GetName]に対し、[Emperor.Monarch.GetHerHis]の神聖ローマ帝国皇帝としての権限で、帝国への加盟を認めるよう請願した。さらに、彼らは、ボヘミアは彼らのより大きな領土の一部に過ぎないので、ボヘミアの選帝侯位はハンガリーの[Hungary.Monarch.Dynasty.GetName]王朝に正式に移行されるべきだと主張している。"
+ incident_hungary_mission_emperor_alert:1 "ハンガリーとボヘミアの王国が一人の君主の下に統一されたことで、[Emperor.Monarch.GetTitle][Emperor.Monarch.GetName]に対し、神聖ローマ帝国皇帝としての権限で、帝国への加盟を認めるよう請願した。さらに、彼らは、ボヘミアは彼らのより大きな領土の一部に過ぎないので、ボヘミアの選帝侯位は彼らの元へと正式に移行されるべきだと主張している。"
+ incident_hungary_mission_member_alert:1 "ハンガリーとボヘミアの王国が一人の君主の下に統一されたことで、[Emperor.Monarch.GetTitle][Emperor.Monarch.GetName]に対し、神聖ローマ帝国皇帝としての権限で、帝国への加盟を認めるよう請願した。さらに、彼らは、ボヘミアは彼らのより大きな領土の一部に過ぎないので、ボヘミアの選帝侯位は彼らの元へと正式に移行されるべきだと主張している。"
  incident_reformer_dissension_can_happen_tt:0 "§Y帝国の州の大部分を所有している改革派の諸侯は、この結果に異議を唱えています。§!"
  incident_reformer_dissension:0 "改革派の抗議"
  incident_reformer_dissension_emperor_alert:0 "改革派の信仰に従う君主たちは、カトリックの大義を阻止するための彼らの努力が、帝国内で彼らが多数派を形成した場合でさえ、皇帝がプロテスタントを帝国の公式の信仰として宣言することを可能にしたことに愕然としている。[reformed_leader_country.GetName]の[reformed_leader_country.Monarch.GetTitle][reformed_leader_country.Monarch.GetName]に率いられた彼らは、皇帝[Emperor.Monarch.GetName]に接触し、改革派の信仰に対し、帝国内のプロテスタント信仰より大きなものとは言わないものの、同等のものが与えられるよう要求した。"
@@ -1666,7 +1666,7 @@
  east_frisia_empire_tt:0 "§Y東フリースラント§!は神聖ローマ帝国の一部となります\n政体は§Y君主制§!に変更されます。"
  become_helvetic_tt:0 "§Yスイス§!は§Y革命共和国§!になります。"
  genevan_province_tt:0 "§Yジュネーヴ§!は§Yスイス文化§!の全ての§Yサヴォイア§!の州の支配を要求します。"
- westphalia_peace_trigger_tt:0 "帝国で§Y宗教平和§!が達成されたか、あるいは§Y連盟戦争§!が発生して§Y[Root.Religion.GetName]§!が神聖ローマ帝国の公式な宗教である。"
+ westphalia_peace_trigger_tt:0 "帝国で§Y宗教平和§!が達成されたか、あるいは§Y連盟戦争§!が勃発して§Y[Root.Religion.GetName]§!が神聖ローマ帝国の公式宗教となっている。"
  westphalia_peace_reward1_tt:1 "§Y宗教平和§!が達成されている、または帝国が解体されている場合："
  westphalia_peace_reward2_tt:0 "§Y[Root.Religion.GetName]§!が神聖ローマ帝国の公式な宗教である場合："
  legislative_sejm:0 "立法権のあるセイム"
