--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2878,7 +2878,7 @@
  flavor_vij.EVTOPTA3:0 "寺に資金を寄付する。"
  flavor_vij.EVTOPTB3:0 "彼らに熟練した建築家を派遣する。"
  flavor_vij.EVTNAME4:0 "ヴェアーラブハドラ寺院"
- flavor_vij.EVTDESC4:0 "ヴェアーラブハドラ寺院はヴィジャヤナガル建築様式および芸術のすばらしい模範を示している。ヴィシュワカルマのバラモンの建築家はすでにヴェアーラブハドラ神殿専用の彫刻について合意している。聖堂の内部は絶妙で、複雑な寺院には壮大な彫刻が豊富にある。寺院の一つには、我々の帝国の職人によって作られた踊り子、音楽家、およびその他の彫刻の実物の印象を持つ柱がある。ヴィシュワカルマのバラモンの建築家によって作られると約束された巨大な花崗岩のナンディの雄牛は、一つの石から切り取られ、天井には息を呑むほど美しい壁画が描かれる。唯一の問題は金である…"
+ flavor_vij.EVTDESC4:0 "ヴェアーラブハドラ寺院はヴィジャヤナガル建築様式および芸術の素晴らしい実例となるだろう。ヴィシュワカルマのバラモンの建築家はヴェアーラブハドラ神に捧げる寺院を彫刻することについて既に合意している。聖堂の内部は精緻で、複雑な寺院には壮大な彫刻がふんだんに施される。寺院の一つには、我々の帝国の職人によって制作された踊り子、音楽家、およびその他の等身大の像が彫刻された柱がある。ヴィシュワカルマのバラモンの建築家が制作すると約束した巨大な花崗岩のナンディの雄牛は、一つの石から彫りだされ、天井には息を呑むほど美しい壁画が描かれる。唯一の問題は資金である…"
  flavor_vij.EVTNAME5:0 "ヴェールール城塞"
  flavor_vij.EVTDESC5:0 "西暦1566年に、ヴェールール城塞はヴィジャヤナガル王国の下でチンナ・ボンミ・ナーヤカとティンマ・レッディ・ナーヤカ、そして族長たちによって建設された。壮大な城壁、広大な堀と丈夫な石積みで有名であり、この城塞はアルコットとチットール地区の近くの採石場から取られた花崗岩で建設された。城塞の中には、ジャラカンデスワラールに捧げられた寺院があり、その彫刻が有名である。"
  flavor_vij.EVTOPTA5:0 "ヴェールール城塞に優る要塞を建設しよう！"
@@ -2887,17 +2887,17 @@
  flavor_vij.EVTDESC6:0 "ヴィジャヤナガル王国の皇帝クリシュナ・デーヴァ・ラーヤは、アーンドラ・ボージャ、ムール・ラーヤラ・ガンダ－「三王の王」－、カンナダ・ラージヤ・ラーマ・ラーマナ－「カンナダ帝国の主」－といった称号を獲得した。ビジャープルのスルタンと、ゴールコンダとオリッサのラージャを打ち負かすことにより、クリシュナ・デーヴァ・ラーヤはインド南部の最も強力な支配者となった。王は有能な統治者であっただけでなく、戦いの最前線から傷病者にさえ付き添った優秀な将軍でもあった。彼の宰相ティンマラサと共に、王は王国をよく支配し、国の平和を維持し、国民の繁栄を高めた。"
  flavor_vij.EVTOPTA6:0 "神は我々に微笑んでいる！"
  flavor_vij.EVTNAME7:0 "モーラ"
- flavor_vij.EVTDESC7:0 "カダパの陶工一家で生まれた女性詩人モーラは、サンスクリット・ラーマーヤナをテルグ語に翻訳した。彼女はシヴァ神を指導者であると主張し、テルグ語でバーガヴァタ・プラーナを書いた詩人ボダナからインスピレーションを受けた。彼女はラーマの物語を書いたが、モーラは詩人の一般的な慣習に従って彼女のラーマーヤナをどんな王にも捧げることを拒んだ。クリシュナ・デーヴァ・ラーヤは彼女を彼の宮廷に招き、そこで彼女はラーマーヤナを彼と彼の詩人の前で朗読した。モーラは主に簡単なテルグ語を使用し、サンスクリット語はごくまれにしか使用されず、モーラ・ラーマーヤナとして知られる作品はテルグ語で書かれている。モーラ・ラーマーヤナの最初の詩はこう書かれている。「ラーマーヤナは何度も書かれてきた。毎日食事をしているからといって誰が食事を止めることができるだろうか？ラーマの物語もそうである。可能な限り多くの回数その物語を書き、読み、愛すことができるのだ」"
- flavor_vij.EVTOPTA7:0 "女性詩人を支援する。"
+ flavor_vij.EVTDESC7:0 "カダパの陶工一家に生まれた女流詩人モーラは、サンスクリット語のラーマーヤナをテルグ語に翻訳した。彼女はシヴァ神を師として仰ぎ、テルグ語でバーガヴァタ・プラーナを書いた詩人ボダナから触発を受けた。彼女はラーマの物語を書いたが、モーラは詩人の一般的な慣習に従い、彼女のラーマーヤナをいかなる王にも捧げることを拒んだ。クリシュナ・デーヴァ・ラーヤは彼女を彼の王宮に招き、そこで彼女はラーマーヤナを王と王の詩人の前で朗読した。モーラは主に簡単なテルグ語を使用しており、サンスクリット語はごくまれにしか使用しておらず、モーラ・ラーマーヤナとして知られる作品はテルグ語で書かれている。モーラ・ラーマーヤナの最初の詩はこう書かれている。「ラーマーヤナは何度も書かれてきた。毎日食事をしているからといって誰が食事を止めることができるだろうか？ラーマの物語もそうである。人は望む限り何度でもその物語を書き、読み、愛すことができるのだ」"
+ flavor_vij.EVTOPTA7:0 "女流詩人を支援する。"
  flavor_vij.EVTOPTB7:0 "彼女を無視する。"
  flavor_vij.EVTNAME8:0 "タラパカ・ティルマランマ"
- flavor_vij.EVTDESC8:0 "最初のテルグの女性詩人と考えられているタラパカ・ティルマランマは、バラモンの家に生まれ、スヴドラの嫁入りを著作した。その1170の詩は、アルジュナとスヴドラの結婚についてのものである。彼女は有名な歌唱詩人であるアナマチャーヤの妻だった。"
+ flavor_vij.EVTDESC8:0 "テルグ語初の女流詩人であると考えられているタラパカ・ティルマランマは、バラモンの家に生まれ、スヴドラの嫁入りを著作した。その1170篇の詩は、アルジュナとスヴドラの結婚をテーマにしたものである。彼女は有名な歌唱詩人であるアナマチャーヤの妻であった。"
  flavor_vij.EVTNAME9:0 "アスタディガジャス"
  flavor_vij.EVTDESC9:0 "1509年から1529年の死去までの間ヴィジャヤナガル王国を支配した皇帝のスリ・クリシュナ・デーヴァ・ラーヤは、アスタディガジャスと呼ばれる8人のテルグの詩人を後援していた。アラサニ・ペダダナ、ナンディ・ティムマナ、マディヤギャリ・マラナ、ダルジャティ、アヤララジュ・ラムムハドルドゥ、ピンガリ・スラナ、ラマラジャブフシャヌド、テナリ・ラマクリシュナウドの8人の詩人は、文学の会合において8つの柱とみなされた。プラバンダ時代は、アスタディガジャ時代とも呼ばれるが1540～1600年にかけて続いた。詩人たちの宮廷は、ブフーナ・ヴィジャヤムまたは世界征服とも呼ばれた。"
  flavor_vij.EVTOPTA9:0 "プラバンダの時代を開始しよう！"
  flavor_vij.EVTOPTB9:0 "他のものに注力する。"
  flavor_vij.EVTNAME10:0 "ビャサターサ"
- flavor_vij.EVTDESC10:0 "学者ビャサターサは、ドヴァイタ・ヴェーダーンタ（ヴェーダの二元論的結論）学派の3つの霊的な光またはムニトリアムの一つとして評価されている。彼の反対者さえも、彼が彼に反対するすべての思想学派についての明確な理解と解説を持ち合わせていることを賞賛した。ビャサターサは論理と哲学における議論と対話の熟練者で、クリシュナ・デーヴァ・ラーヤ治世下でヴィジャヤナガル王国に大きな影響を与えた。王はビャサターサに最大の関心と敬意を払った。クリシュナ・デーヴァ・ラーヤはこの学者を彼のクラデヴァータ（一族の守り神）や教師以上のものとみなした。ビャサターサの有名な作品には、ニャヤムリタム（論理の蜜）、タルカタンダバ（論理の踊り）、タパパヤ・チャンドリカ（解説の月光）、マヤバダ・カンダナ・マンダラマンジャリ、アップダディ・カンダナ・マンダラマンジャリ、プラパンチャ・ミディアヴィニマーナ・カンダナ・マンダラマンジャリ、タッタバヴィヴェカ・マンダラマンジャリ、ヴィドジジーバナそしてサッタークヴァスタが含まれている。"
+ flavor_vij.EVTDESC10:0 "学者ビャサターサは、ドヴァイタ・ヴェーダーンタ（ヴェーダの二元論的結論）学派の3つの霊的な光またはムニトリアムの一つとして評価されている。彼の反対派さえも、反対派すべての思想学派についての明確な理解と解説を彼が持ち合わせていることを称賛した。ビャサターサは論理学と哲学における議論と対話の熟練者で、クリシュナ・デーヴァ・ラーヤ治世下でヴィジャヤナガル王国に大きな影響を与えた。王はビャサターサに最大の関心と敬意を払っていた。クリシュナ・デーヴァ・ラーヤはこの学者を自分のクラデヴァータ（一族の守り神）でありグル（ヒンズー教の尊師）に他ならないとした。ビャサターサの有名な作品には、ニャヤムリタム（論理の甘蜜）、タルカタンダバ（論理の踊り）、タパパヤ・チャンドリカ（解説の月光）、マヤバダ・カンダナ・マンダラマンジャリ、アップダディ・カンダナ・マンダラマンジャリ、プラパンチャ・ミディアヴィニマーナ・カンダナ・マンダラマンジャリ、タッタバヴィヴェカ・マンダラマンジャリ、ヴィドジジーバナそしてサッタークヴァスタなどがある。"
  flavor_ayu.EVTNAME1:1 "[Root.Monarch.GetName][Root.Monarch.Dynasty.GetName]の改革"
  flavor_ayu.EVTDESC1:1 "[Root.Monarch.GetName][Root.Monarch.Dynasty.GetName][Root.Monarch.GetTitle]は国の政府を効率化しようとして、様々な改革を提案している。それらの多くは優れた効果を挙げる一方で、高くつくだろうし、社会不安も引き起こすかもしれない。我々はどうするべきだろうか？"
  flavor_ayu.EVTOPTA1:0 "改革とともに進もう。"
@@ -4056,7 +4056,7 @@
  desc_inc_pacific_expedition:0 "我々の後継者はかつて遠く離れた土地への壮大な旅に参加した。彼と彼が引き連れていた船の乗組員がこの旅の間に得た経験は、現在我々の航海能力を向上させるために有効活用されている。"
  flavor_inc.2.t:0 "チャンカの没落とクスコの台頭"
  flavor_inc.2.d:0 "何年もの戦争の末、1438年に危険な方法でチャンカを全面的に打倒したことで、クスコ王国はこれまで以上に大きな地位に駆け上がった。王国を救った若い王パチャクテクは、ちょうどその後にチャンカ王国そのものを征服することになった。この国は古代ワリ帝国の没落以来長い間、クスコだけでなくアンデス世界の多くの国々から厳しく貢物を取り立てた。\nパチャクテクはクスコ王国の偉大な指導者として名を上げただけでなく、チャンカの崩壊により隣国や進貢国からの莫大な贈り物という巨万の財宝を利用する権利を得た。これはまさに、我々の王国を改革し、拡大するための事業を行うのに必要な資金の一種である。この時点で誰もパチャクテクの計画を知らないが、確かなことは、彼は望む方向にクスコを操る手段があるということである。"
- flavor_inc.2.a:1 "Long live Pachacuti, he who makes the Ground Shake!"
+ flavor_inc.2.a:1 "パチャクテク万歳、なんて魅力的な人なんだ！"
  flavor_inc.3.t:1 "[807.GetName] - 世界の中心"
  flavor_inc.3.d:1 "パチャクテクの最初の予定の一つは、[807.GetName]の再建である。我々の首都は何年にもわたってその目的を果たしてきたが、それはいろいろな意味でしばしば近くの川の氾濫に見舞われるただの田舎の村に過ぎない。そのような都市はもはや我々のような野心的な王国には適さない。都市の小さなモデルバージョンを作成することで、$MONARCH$はプロジェクト期間中に都市からの完全な疎開が必要な都市全体を再設計する計画を立案した。\nこのプロジェクトに必要な人材と資材は、新しい領土の中から容易に入手できるが、我々の支配下にある様々な首長たちを動員するには、贈り物や宴会の太っ腹な利用が必要である。しかし、それは新しい首都のために支払わなければならない対価だ。"
  flavor_inc.3.a:0 "価値ある首都を建設しよう！"
