--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -416,7 +416,7 @@
  BYZ_buff_private_trade_fleet:1 "階級特権「§Y民間交易船団§!」が強化され、§Y船の交易力§!補正が2倍になります。"
  BYZ_buff_burgher_loans:1 "階級特権「§Y[Root.GetBurghersName]§!への借款」が強化され、ローンを5つではなく§G7§!つ獲得できるようになります。"
  BYZ_buff_free_enterprise:1 "階級特権「§Y自由競争§!」が強化され、交易効率が§G+5.0%§!され、§Y絶対主義§!を低下させなくなります。"
- BYZ_naval_commander_advisor_buff:1 "今後「§Y海軍改革者§!」の顧問は、追加で顧問レベル毎に世界交易力§G+3.0%§!を得ます。"
+ BYZ_naval_commander_advisor_buff:1 "今後「§Y海軍改革者§!」の顧問は、追加で顧問レベル毎に世界交易力を§G+3.0%§!しまます。"
  BYZ_revoking_disorganization_of_the_military:1 "階級特権「§Y劣化した陸軍§!」がより簡単に剥奪できるようになります。具体的には§Y陸軍士気補正§!の条件が撤廃され、§Y総開発度§!と§Y陸軍規模§!の要求値が下げられます。"
  BYZ_if_we_have_60_estate_loyalty:0 "§Y[Root.GetBurghersName]§!の忠誠が§G60§!以上のとき、追加で以下を獲得します："
  BYZ_most_developed_city_in_the_world:0 "§Y[This.GetName]§!が全ての都市のなかで最も高い§Y開発度§!を持っている。"
@@ -1834,8 +1834,8 @@
  establish_communities_upgraded:0 "共同体の設立（アップグレード版）"
  maximize_profit_upgraded_desc:0 "あなたの商人は、このノードで利益を最大化するために心血を注いでいる。"
  hostile_trading_upgraded_desc:0 "あなたの商人は、同一ノードで活動する諸国から情報収集する。"
- improve_inland_routes_upgraded_desc:1 "Your Merchant will gather knowledge of the terrain in this node which will benefit your armies."
- establish_communities_upgraded_desc:1 "Your Merchant will strive to improve relations with other countries active in the Node."
+ improve_inland_routes_upgraded_desc:1 "あなたの商人は、このノードの地形に関する知識を収集し、あなたの軍隊に役立てる。"
+ establish_communities_upgraded_desc:1 "あなたの商人は、ノード内で活動中の他国との関係改善に努める。"
  HAS_FORCE_CONVERTED_1_COUNTRIES_TT:0 "§Y1§!ヶ国以上強制改宗した（§Y[This.GetNumForceConvertedCountries]§!/§Y1§!）"
  HAS_FORCE_CONVERTED_2_COUNTRIES_TT:0 "§Y2§!ヶ国以上強制改宗した（§Y[This.GetNumForceConvertedCountries]§!/§Y2§!）"
  HAS_FORCE_CONVERTED_3_COUNTRIES_TT:0 "§Y3§!ヶ国以上強制改宗した（§Y[This.GetNumForceConvertedCountries]§!/§Y3§!）"
@@ -2767,12 +2767,12 @@
  REV_IRAN_STRING:0 "革命イラン"
  REV_IRAN_STRING_ADJ:0 "イラン"
  ERS:0 "エーラーンシャフル"
- ERS_ADJ:2 "Eranian"
+ ERS_ADJ:2 "イラン"
  ERANSHAHR_STRING:0 "エーラーンシャフル"
- ERANSHAHR_STRING_ADJ:2 "Eranian"
- ERANSHAHR_ideas:1 "Eranian Ideas"
- ERANSHAHR_ideas_start:1 "Eranian Traditions"
- ERANSHAHR_ideas_bonus:1 "Eranian Ambition"
+ ERANSHAHR_STRING_ADJ:2 "イラン"
+ ERANSHAHR_ideas:1 "エーラーンシャフルのアイデア"
+ ERANSHAHR_ideas_start:1 "エーラーンシャフルの伝統"
+ ERANSHAHR_ideas_bonus:1 "エーラーンシャフルの宿願"
  ers_guardians_of_the_sacred_fire:0 "聖火の守護者"
  ers_guardians_of_the_sacred_fire_desc:0 "王の中の王という立場は、自国の絶対的権威であるだけでなく、聖火の守護者でもある。したがって、彼の役割は非常に神聖な目的を果たしている。"
  ers_restore_the_academy_of_gondishapur:0 "ジュンディーシャープール学院の再発見"
@@ -4130,10 +4130,10 @@
  SELJUK_EMPIRE:0 "セルジューク帝国"
  SELJUK_EMPIRE_ADJ:0 "セルジューク"
  has_unified_all_culture_fr_fr_tt:0 "§Y[Root.Culture.GetGroupName]§!文化グループの全州を自国もしくは自国の植民地国もしくは自国の従属国の植民地国が領有している"
- just_asked_to_convert_timer:0 "Just asked to convert"
+ just_asked_to_convert_timer:0 "まさに変換を依頼したところ"
  desc_just_asked_to_convert_timer:0 ""
  estate_nobles_highland_fortifications_revoke:0 "§Y要塞§!のある§Y山岳§!州はすべて、補正§Y山岳のインフラ整備§!を失います。"
- flavor_arm.1.b:0 "Our victory cannot erase our roots!"
- mam_reward_alliance_yes_tt_no_dlc: "£yes£ Reward from adopting a cooperative stance towards @VEN Venice:"
- mam_reward_alliance_no_tt_no_dlc: "£no£ Reward from adopting a cooperative stance towards @VEN Venice:"
+ flavor_arm.1.b:0 "この勝利は我等自身のルーツを消すことなぞできぬ！"
+ mam_reward_alliance_yes_tt_no_dlc: "£yes£ @VEN ヴェネツィアに対して協力的姿勢を取ることで得られる報酬："
+ mam_reward_alliance_no_tt_no_dlc: "£no£ @VEN ヴェネツィアに対して協力的姿勢を取ることで得られる報酬："
  desc_mam_disc_troops_modifier:0 ""
