--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -157,7 +157,7 @@
  republic_factions.5.a.tt:0 "今のところ、記述にない秘密のギルドの影響力をそのままにします。"
  republic_factions.5.b:0 "結構。忠実であることが知られている人物にこれを調査させよう。"
  republic_factions.6.t:0 "国家よりもギルド"
- republic_factions.6.d:0 "貴族たちが[Root.GetAdjective]の政治に浸透していたと思われる秘密結社について警告したとき、我々はそれを聞き入れないことを選んだ。彼らは、この陰謀が我々に向けられれば、我々の生命にとって非常に多くの対価を払うことになると予測した。\n\n非常に劇的なことは何も起こっていないが、我々に近い顧問の一人が最近、非常に疑わしい決断を下し、最終的に、顧問が実際に参加していた「秘密の」結社への奉仕であることを認めた。他の政治家たちはこれについて憤慨しており、現段階では不祥事を避けることはできない。"
+ republic_factions.6.d:0 "[Root.GetAdjective]政治に浸透しているとされる秘密結社について貴族たちが警告したとき、我々は耳を貸さなかった。貴族たちは、この陰謀が我々に向けられれば、我々は命がけで償うことになるかもしれないと予言した。\n\nそれほど劇的なことは起こっていないが、我々の親しい顧問の一人が最近、非常に疑わしい決断を下し、最終的には、彼が実際に属していた「秘密」結社への奉仕であったことを認めた。他の政治家たちはこの件で大騒ぎしており、現段階ではスキャンダルを避けることはできない。"
  republic_factions.6.a:0 "[Root.GetName]への彼らの不忠は処罰されるべきだ。"
  republic_factions.6.b:0 "事態の打開を試みる。"
  republic_factions.7.t:0 "国際的なギルドとの接触"
