--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -322,3 +322,8 @@
  dlc137_WES_sprite_pack:0 "ヴェストファーレンのスプライト"
  dlc137_CRO_sprite_pack:0 "クロアチアのスプライト"
  dlc137_MOL_sprite_pack:0 "モルダヴィアのスプライト"
+ dlc116_KRL_sprite_pack:0 "カレリアのスプライト"
+ dlc120_MIA_sprite_pack:0 "ミャオのスプライト"
+ dlc120_YI_sprite_pack:0 "彝のスプライト"
+ dlc137_LOW_sprite_pack:0 "ニーダーザクセンのスプライト"
+ dlc137_SLO_sprite_pack:0 "スロベニアのスプライト"
