Save/Update files [ci skip]

--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -387,8 +387,8 @@
  BYZ_this_province_will_lose_development:0 "§Y[This.GetName]§!は§Y開発度§!を§R-75.0%§!され、§Y[Root.GetName]§!は失った§Y開発度§!ごとに§G+75¤§!を得ます。"
  BYZ_may_only_build_in_112:1 "§Y[112.GetName]§!において、造船所やドックを必要とせずに§Yガレアス§!が建造できるようになります。"
  BYZ_upgrading_theodosian_walls_will_be_25_cheaper:0 "§Yテオドシウスの城壁§!のアップグレードコストが§G-25.0%§!されます。"
- BYZ_unlock_decision_to_upgrade_hexamilion_wall:0 "「§Yヘキサミリオン城壁の再建§!」の決断を解禁され、§Y[4701.GetName]§!の州の要塞化が可能になります。"
- BYZ_unlock_decision_for_theodosian_walls:0 "決断「§Yテオドシウスの城壁§!」が解禁され、§Y[151.GetName]§!州を要塞化できます。"
+ BYZ_unlock_decision_to_upgrade_hexamilion_wall:0 "「§Yヘキサミリオン城壁の再建§!」の決断を解禁され、§Y[4701.GetName]§!州を要塞化できるようになります。"
+ BYZ_unlock_decision_for_theodosian_walls:0 "決断「§Yテオドシウスの城壁§!」が解禁され、§Y[151.GetName]§!州を要塞化できるようになります。"
  BYZ_upgraded_either_walls_to_level_2:0 "§Yエクサミリオンの城壁§!か§Yテオドシウスの城壁§!のどちらかをレベル2にアップグレードする。"
  BYZ_hexamilion_wall_is_being_upgraded:0 "§Yヘキサミリオンの城壁§!はアップグレードされていません。"
  BYZ_theodosian_wall_is_being_upgraded:0 "§Yテオドシウスの城壁§!はアップデートされていません。"
@@ -416,7 +416,7 @@
  BYZ_buff_private_trade_fleet:1 "階級特権「§Y民間交易船団§!」が強化され、§Y船の交易力§!補正が2倍になります。"
  BYZ_buff_burgher_loans:1 "階級特権「§Y[Root.GetBurghersName]§!への借款」が強化され、ローンを5つではなく§G7§!つ獲得できるようになります。"
  BYZ_buff_free_enterprise:1 "階級特権「§Y自由競争§!」が強化され、交易効率が§G+5.0%§!され、§Y絶対主義§!を低下させなくなります。"
- BYZ_naval_commander_advisor_buff:1 "今後「§Y海軍改革者§!」の顧問は、追加で顧問レベル毎に世界交易力を§G+3.0%§!しまます。"
+ BYZ_naval_commander_advisor_buff:1 "今後「§Y海軍改革者§!」の顧問は、追加で顧問レベル毎に世界交易力を§G+3.0%§!します。"
  BYZ_revoking_disorganization_of_the_military:1 "階級特権「§Y劣化した陸軍§!」がより簡単に剥奪できるようになります。具体的には§Y陸軍士気補正§!の条件が撤廃され、§Y総開発度§!と§Y陸軍規模§!の要求値が下げられます。"
  BYZ_if_we_have_60_estate_loyalty:0 "§Y[Root.GetBurghersName]§!の忠誠が§G60§!以上のとき、追加で以下を獲得します："
  BYZ_most_developed_city_in_the_world:0 "§Y[This.GetName]§!が全ての都市のなかで最も高い§Y開発度§!を持っている。"
@@ -439,7 +439,7 @@
  BYZ_we_are_in_preview:1 "§Oプレビューモード§!中です。ツリーを最終確定したければ、「§Y現在のミッションツリーを選択§!」ボタンを押してください。"
  BYZ_if_we_have_the_largest_navy_in_the_world:0 "§Y世界§!最大の§Y海軍§!を有する場合："
  BYZ_enable_the_varangian_guard_mercenary_company:0 "傭兵団「§Jヴァリャーグ衛兵§!」が利用可能になり、雇用時に§Y軍熟練度§!を一切消費しません。"
- BYZ_army_organizer:0 "今後「§Y陸軍組織者§!」の顧問は、追加で顧問レベル毎に傭兵コスト§G-3.0%§!を得ます。"
+ BYZ_army_organizer:0 "今後「§Y陸軍組織者§!」の顧問は、追加で顧問レベル毎に傭兵コストを§G-3.0%§!します。"
  BYZ_get_army_organizer:0 "費用が§G-60.0%§!の§Y陸軍組織者§!を得ます。この顧問の§Y文化§!と§Y宗教§!はもっとも開発度の高い同盟国と同じになります。"
  BYZ_pronoia_buff_army_tradition:0 "20以上の連隊を持つ§Yプロノイア§!は§G+0.2§!の年間陸軍伝統を提供します。"
  BYZ_upgrade_the_reliance_on_the_pronoiar:0 "「§Yプロノイアへの依存§!」補正をアップグレードします。プロノイアの上限数：§G+4.00§!"
@@ -467,7 +467,7 @@
  BYZ_10_year_cooldown:0 "§Y決断§!を10年間使用していない。"
  BYZ_25_year_cooldown:0 "§Y決断§!を25年間使用していない。"
  BYZ_has_integrated_galata:0 "決断「§Yガラタの統合§!」により§Yガラタ§!が§Y[151.GetName]§!に統合されている。"
- BYZ_unlock_mercantilism_privilege:0 "§Y[Root.GetBurghersName]§!に「§Y単一市場の振興§!」階級特権を有効化する。§Y重商主義§!が50および80に達したときに追加ボーナスを得る。"
+ BYZ_unlock_mercantilism_privilege:0 "§Y[Root.GetBurghersName]§!の階級特権「§Y単一市場の振興§!」を有効化し、§Y重商主義§!が50および80に達したときに追加ボーナスを獲得できるようになります。"
  BYZ_bonuses_of_single_market:0 "重商主義が§M50§!以上の場合：\n配置した商人の交易力補正：§G+50.0%§!\n重商主義が§M80§!以上の場合：\n交易品生産補正：§G+10.0%§!"
  estate_privilege_revoke_lose_modifier_tooltip:0 "§R階級特権によって得た以下の効果を失います：§!"
  BYZ_every_catholic:0 "すべての§Yカトリック§!は即座に§Y正教会§!に改宗します。ただし、§Y[Root.GetName]§!に対してライバル、激怒、敵意を持つ国は改宗されません。"
@@ -773,7 +773,7 @@
  laesio_enormis_reform_desc:0 "莫大損害とは、契約が法的に不当と見なされる場合、損害を受けた当事者は契約を撤回できるという考え方である。この是正的な司法の考え方は、貧困層が土地を不当に安い値段で貴族に売却していたため、特にビザンツ帝国で千年紀に差し掛かった頃にビザンツ帝国で広く受け入れられた。"
  restore_the_master_of_offices_reform:0 "マギステル・オフィキオルムの復活"
  restore_the_master_of_offices_reform_desc:0 "マギステル・オフィキオルム（行政長官）は、かつてビザンツ帝国の行政における主要な地位の一つであった。正確な職責は何世紀にもわたり変化していったが、概してこの地位には幅広い職責が課せられていた。その後、行政機関の多くの古い部分と同様にこの役職も廃れていき、帝国ではより簡素なしかし依然として重要な地位であるマギストロスに置き換えられた。"
- mechanic_enables_statesman_autonomy_reduction_yes:0 "§Y政治家§!の顧問は今後レベルごとに月間自治率減少§G-0.01§!を得ます。"
+ mechanic_enables_statesman_autonomy_reduction_yes:0 "今後§Y政治家§!の顧問は、レベルごとに月間自治率減少を§G-0.01§!します。"
  theme_system_reform:0 "テマ制"
  theme_system_reform_desc:0 "テマはビザンツの軍隊を中心とした地方区分制度である。民政と軍事を大きく結びつけ、辺境地域に適切な防衛を提供し、国家の軍事力を向上させた。"
  mechanic_BYZ_buff_dynatoi_land_grants_yes:2 "階級特権「§Yエウゲネイスの地権§!」が強化され、§Y最大絶対主義§!の低下がなくなり、陸軍扶養限界補正が§G+10.0%§!されるようになります。"
@@ -995,7 +995,7 @@
  ARB_if_at_least_60_church_loyalty:0 "§Y[Root.GetClergyName]§!階級の忠誠が§G60§!以上の場合："
  ARB_has_developed_arid_provinces:1 "気候が§Y乾燥§!の州を§G20§!回以上§Y開発§!する。（現在：§Y[Root.num_of_times_developed_arid.GetValue]§!回）"
  NUM_OF_ARID_DEVELOPMENT_COUNTER:0 "[Root.num_of_times_developed_arid.GetValue]"
- ARB_unlock_oasis_development:1 "§Y[Root.GetBurghersOrFallbackName]§!の階級特権「§Yオアシスの開発§!」が解禁されます。これにより、§Y乾燥§!気候の州に対するペナルティを軽減し、§Y砂漠§!・§Y沿岸砂漠§!の州における州の開発コスト§G-15.0%§!を獲得します。"
+ ARB_unlock_oasis_development:1 "§Y[Root.GetBurghersOrFallbackName]§!の階級特権「§Yオアシスの開発§!」が解禁されます。これにより、§Y乾燥§!気候の州に対するペナルティを軽減し、§Y砂漠§!・§Y沿岸砂漠§!の州における州の開発コスト§G-15.0%§!を獲得できるようになります。"
  ARB_estate_burghers_arid_development_gt:0 "§Y乾燥§!気候の領有州すべてで以下を獲得します：\n州の開発コスト：§G-5.0%§!\n州の入植者の増加：§G+5§!"
  ARB_estate_burghers_arid_development_rt:0 "§Y乾燥§!気候の領有州すべてで以下を喪失します：\n州の開発コスト：§G-5.0%§!\n州の入植者の増加：§G+5§!"
  ARB_estate_burghers_desert_development_gt:0 "§Y砂漠§!・§Y沿岸砂漠§!地形の領有州はすべて、以下を得ます：\n州の開発コスト：§G-15.0%§!"
@@ -1204,7 +1204,7 @@
  YEM_prod_from_coffee:0 "§G10§!年間の§Yコーヒー§!生産分として獲得します。\n"
  YEM_prod_from_all_provs:0 "§G10§!年間の§Y生産§!収入分として獲得します。\n"
  YEM_MONOPOLY_COFFEE_FROM_COFFEE:0 "§G15§!年間の§Yコーヒー§!生産分として獲得します。\n"
- YEM_enable_coffee_monopoly_privilege:0 "§Y[Root.GetBurghersName]§!の階級特権「§Yコーヒーの独占§!」が解禁され、当該の階級に独占権を付与し、§G15§!年分の収入を受け取ることができます。"
+ YEM_enable_coffee_monopoly_privilege:0 "§Y[Root.GetBurghersName]§!の階級特権「§Yコーヒーの独占§!」が解禁され、当該の階級に独占権を付与し、§G15§!年分の収入を受け取ることができるようになります。"
  estate_burghers_YEM_coffee_monopoly_effect_tooltip:0 "§R§Yコーヒー§!から一切の収入がありません§!"
  estate_burghers_YEM_coffee_monopoly_revoke_tooltip:0 "§Yコーヒー§!からの生産収入が回復しました。"
  YEM_revoke_yemen_event_tooltip:1 "階級特権§Yコーヒーの独占§!が剥奪可能になります。"
@@ -1214,7 +1214,7 @@
  YEM_upgrade_propagate_religion_to_30:0 "交易政策「§Y宗教の伝播§!」は必要な交易シェア率が§Y30.0%§!のみとなります。"
  YEM_upgrade_trade_ships_privilege_to_20_ship_trade_power:0 "階級特権「§Y民間交易船団§!」がアップグレードされ、船の交易力補正が§G+20.0%§!増加します。"
  YEM_upgrade_trade_ships_privilege_to_30_ship_trade_power:0 "階級特権「§Y民間交易船団§!」がアップグレードされ、船の交易力補正が§G+30.0%§!増加します。"
- YEM_master_of_mint:1 "顧問§Y造幣局長官§!はレベル毎に域外交易力§G+5.0%§!を提供するようになります。"
+ YEM_master_of_mint:1 "今後§Y造幣局長官§!の顧問は、レベル毎に域外交易力を§G+5.0%§!します。"
  YEM_unified_yemen_tt:0 "§Yイエメン§!文化の全州が、§Y[Root.GetName]§!および§Y[Root.Religion.GetName]§!によって領有されている。"
  num_of_wars_won_against_heretics:0 "対異端国への勝利回数"
  YEM_sanction_holy_war_claims_areas:1 "封建神権制のインタラクション「§Y制裁のための聖戦§!」がアップグレードされ、個々の州の代わりに地域全域に§Y請求権§!を獲得するようになります。"
@@ -1965,7 +1965,7 @@
  asha_vahishta_gain_modifier:0 "アシャ・ワヒシュタ上昇補正"
  adur_burzhen_mihr_interaction:0 "アードゥル・ブルゼーンミフル"
  adur_burzhen_mihr_interaction_desc:0 ""
- adur_burzhen_mihr_interaction_at:1 "§Yゾロアスター教へのの招待§!を§G+1§!します（現在：§Y[Root.GetZoroastrianInvitationValue]§!）。また、§Y[Root.Religion.GetName]§!に対象国の改宗を要求できるようにします。"
+ adur_burzhen_mihr_interaction_at:1 "§Yゾロアスター教への招待§!を§G+1§!（現在：§Y[Root.GetZoroastrianInvitationValue]§!）し、対象国を§Y[Root.Religion.GetName]§!への改宗を要求できるようになります。"
  adur_burzhen_mihr_mod:0 "アードゥル・ブルゼーンミフルの再燃"
  desc_adur_burzhen_mihr_mod:0 ""
  adur_farnbag_interaction:0 "アードゥル・ファローハグ"
@@ -3039,7 +3039,7 @@
  geo_nicholas_icon_tt_no:0 "£no£ §Y聖ニコラオスの聖像§!を設置中にこのミッションを完了した場合、以下を受け取ります："
  geo_john_icon_tt_yes:0 "£yes£ §Y階梯者聖イオアンの聖像§!を設置中にこのミッションを完了した場合、以下を受け取ります："
  geo_john_icon_tt_no:0 "£no£ §Y階梯者聖イオアンの聖像§!を設置中にこのミッションを完了した場合、以下を受け取ります："
- geo_advisor_scaling_tt:1 "§Y神学者§!および§Y異端審問官§!の顧問は、1レベルにつき年間総主教の権威§G+0.1§!の効果を獲得します。\n"
+ geo_advisor_scaling_tt:1 "§Y神学者§!および§Y異端審問官§!の顧問は、レベル毎に年間総主教の権威を§G+0.1§!します。\n"
  geo_metropolitan_bonus_tt:0 "現在、§Y主教座の奉献§!は州の開発コストを§G-10.0%§!します。"
  geo_consecrated_ground:0 "神域"
  geo_narikala_leviathan:0 "ナリカラ要塞の拡張"
@@ -3263,7 +3263,7 @@
  sparapet_office:0 "要職スパラペト"
  sparapet_office_desc:0 "スパラペトの要職の復活は、自国古来の軍事伝統を保全し、強化する上で重要な一歩となる。スパラペトは、自国の最高司令官として、自国に対するいかなる脅威にも直面する自軍の即応性と能力を確保する上で重要な役割を果たすだろう。"
  unlock_nakharar_title_tt:1 "レベル2の政府改革「§Yナハラルの称号§!」を解禁し、以下の効果を獲得します：\n貴族階級の特権最大数：§G+1.00§!\n貴族階級の影響力：§Y+5.0%§!\n貴族階級の忠誠均衡値：§G+10.0%§!\n\nこの改革には以下のメカニクスも含まれます：\n§Y貴族階級§!から土地の接収をしても、貴族の反乱が発生しません。"
- mechanic_recruiting_general_gives_army_tradition_yes:0 "将軍の募集により陸軍伝統§G+0.25§!を獲得します。"
+ mechanic_recruiting_general_gives_army_tradition_yes:0 "将軍の募集により陸軍伝統が§G+0.25§!されます。"
  unlock_sparapet_office_tt:2 "レベル5の政府改革「§Y要職スパラペト§!」を解禁し、以下の効果を獲得します：\n戦闘からの陸軍伝統：§G+50.0%§!\n陸軍指揮官枠：§G+1.00§!\n\nこの改革には以下のメカニクスも含まれます：\n将軍の募集により陸軍伝統§G+0.25§!を獲得します。"
  armenia_center_conversion_tt:0 "§Y[410.GetName]§!が§Yコプト教の改宗の中心地§!になります。この中心地は§Y30§!年間、隣接州を§Yコプト教§!に改宗します。"
  arm_sword_of_true_faith:0 "真の信仰の剣"
