--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -2618,7 +2618,7 @@
  EVTDESC6425:0 "塩生産が不足しているという噂が国を襲っている。我々はこれらの噂を抑えようとしたが、人々は間もなく塩の危機が訪れるだろうと確信している。"
  EVTOPTA6425:0 "我々はこれを辛抱しなければならないだろう。"
  EVTNAME6426:0 "優秀な供給"
- EVTDESC6426:0 "我々の海軍の供給品の生産は非常に良い状況であり、それは我々に船の生産量の増加をもたらしている。"
+ EVTDESC6426:0 "我々の海軍の供給品の生産は非常に良い状況であり、我々の造船を加速させている。"
  EVTOPTA6426:0 "それは良い知らせだ。"
  EVTNAME6427:0 "品質の悪い銅"
  EVTDESC6427:0 "我々の銅鉱山の中には、標準水準を下回っているものがある。これが、我が国の砲兵ユニットのコストを押し上げている。"
