--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -53,10 +53,10 @@
  NATIVES_CANT_FABRICATE:0 "原住民は請求権を捏造できない。\n"
  WEST_REASON_NATIVE:0 "先に自国の政治体制を変える必要がある。"
  WEST_REASON_RELIGION_REFORM:0 "先に自国の宗教を改革する必要がある。"
- REFORM_RELIGION_EXPL:2 "§Y$WHO$§!から学んで我が国の宗教と社会を改革することで、我々は$NUM|Y$制度の受容と彼らの政府形態を採用しながら、§Y$LVL$§!技術をカテゴリ全体へと広げることができる。"
+ REFORM_RELIGION_EXPL:2 "§Y$WHO$§!から学んで我が国の宗教と社会を改革することで、我々は$NUM|Y$つの制度の受容と彼らの政府形態を採用しながら、§Y$LVL$§!技術をカテゴリ全体へと広げることができる。"
  REFORM_RELIGION_EXPL_DET_2:0 "すべての宗教改革を持ち、ヨーロッパ国境に接しているか、あるいは合計$NEEDED|Y$の技術レベルがあれば、我々の宗教と社会を改革することが可能です。"
  REFORM_RELIGION_NO_SPONSOR_EXPL:0 "我々の技術への理解に専念することで、宗教と社会を改革します。これは政府を現代的なものに変え、我が国に我々を助けてくれる制度をもたらすでしょう。"
- REFORM_NATIVE_EXPL:1 "§Y$WHO$§!から学んで§Y$GOV$§!に改革し、$NUM|Y$の制度を受容するとともに、我が国に§Y$LVL$§!技術の部門を通じて広げます。"
+ REFORM_NATIVE_EXPL:1 "§Y$WHO$§!から学んで§Y$GOV$§!を改革することで、我々は$NUM|Y$つの制度を受容しながら、§Y$LVL$§!技術をカテゴリ全体へと広げることができる。"
  REFORM_NATIVE_EXPL_DET_2:0 "部族評議会から離れてより進んだ政体へと改革することは、もし我らがすべての部族を進歩させ、欧州の国家と国境を有するか、さもなくば$NEEDED|Y$技術段階の全てを保有したならば、可能だ。"
  REFORM_NATIVE_NO_SPONSOR_EXPL:0 "我々の技術への理解を応用して国家を改革します。これは政府をより現代的なものに変え、我々が西洋化することを可能にします。"
  GOTTA_CATCH_THEM_ALL:0 "§R- すべてのネイティブ・アメリカンの進歩が必要です。§!\n"
