Save/Update files [ci skip]

--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -1207,7 +1207,7 @@
  YEM_enable_coffee_monopoly_privilege:0 "§Y[Root.GetBurghersName]§!の階級特権「§Yコーヒーの独占§!」が解禁され、当該の階級に独占権を付与し、§G15§!年分の収入を受け取ることができるようになります。"
  estate_burghers_YEM_coffee_monopoly_effect_tooltip:0 "§R§Yコーヒー§!から一切の収入がありません§!"
  estate_burghers_YEM_coffee_monopoly_revoke_tooltip:0 "§Yコーヒー§!からの生産収入が回復しました。"
- YEM_revoke_yemen_event_tooltip:1 "階級特権§Yコーヒーの独占§!が剥奪可能になります。"
+ YEM_revoke_yemen_event_tooltip:1 "階級特権§Yコーヒーの独占§!の取り消しが可能になります。"
  YEM_if_at_least_galley_fraction:0 "自国海軍において、30.0%以上の§Yガレー船§!もしくは15.0%以上の§Y大型船§!を保有している場合："
  YEM_if_at_least_50_fraction_of_light_ship:0 "自国海軍において、50.0%以上の§Y小型船§!を保有している場合："
  YEM_upgrade_propagate_religion:0 "交易政策「§Y宗教の伝播§!」は必要な交易シェア率が§Y40.0%§!のみとなります。\n\n宗教の伝播で州を改宗するたびに、海軍伝統§G+1.00§!を獲得します。"
@@ -1735,7 +1735,7 @@
  add_meritocracy_or_mil_power_tt:0 "余った§Y能力主義§!は全て、§Y能力主義§!1につき§Y軍事力§!§G10§!へと変換されます。"
  add_devotion_or_mil_power_tt:0 "余った§Y信仰§!は全て、§Y信仰§!1につき§Y軍事力§!§G10§!へと変換されます。"
  add_legitimacy_or_mil_power_tt:0 "余った§Y正統性§!は全て、§Y正統性§!1につき§Y軍事力§!§G10§!へと変換されます。"
- ADD_MERCANTILISM_OR_MONARCHPOWER:0 "余った§重商主義は全て、それぞれの§Y君主力§!§G50§!へと変換されます。"
+ ADD_MERCANTILISM_OR_MONARCHPOWER:0 "余った重商主義は全て、それぞれの§Y君主力§!§G50§!へと変換されます。"
  disable_rebels_from_seize_land_for_estate_ghulams:1 "§Yグラーム§!は、忠誠心が§Y30§!を下回っている時に領地を接収しても、反乱軍が蜂起しなくなります。"
  disable_rebels_from_seize_land_for_estate_qizilbash:0 "§Yクズルバシュ§!は、忠誠度が§Y30§!を下回っている時に領地を接収しても、反乱軍が蜂起しなくなります。"
  unlock_government_reform_tooltip:0 "この政府改革は以下の特性を持っています："
