--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -560,7 +560,7 @@
  boh_prem_conquest_two_title:0 "ポメラニアの再征服"
  boh_prem_conquest_two_desc:0 "我々の征服の成功は、まだ我々の耳の中に残っている。北方のポメラニアの土地もまた、ヴァーツラフ2世の支配下にあり、それゆえ我々のものとなる必要がある。"
  boh_development_one_title:0 "都市の作品"
- boh_development_one_desc:1 "ボヘミア王国は、工業化の面で、隣国に遅れをとっている。その地域で我々の地位を上げること、そしてより大規模な産業を促進することは、投資価値があるものだ。"
+ boh_development_one_desc:1 "ボヘミア王国は、工業化の点で隣国よりも遅れている。この分野における我々の知名度を上げること、そしてより大規模な産業を促進することは、投資に値するものだ。"
  destroy_ayyubids_title:0 "アイユーブ朝の破壊"
  destroy_ayyubids_desc:0 "アイユーブ朝はかつて広大な帝国を支配していたが、今や彼らのかつての栄光の悲惨な影にまで衰退している。我々は彼らを楽にしてやるべきだ。"
  defeat_black_sheep_title:0 "黒羊朝の打倒"
