--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -497,7 +497,7 @@
  stricter_usury_regulations:0 "厳格な高利貸しの規制"
  desc_stricter_usury_regulations:0 "貸し出しの際に利息を課すことができる、ひどい過剰を抑制するため、我々は、許容される利息の最大金額をわずかに変更した。"
  protestantism_events.9.t:0 "忠実な者たちへのメッセージ"
- protestantism_events.9.d:0 "国教会を持つことの大きな強みの一つは、我が国のすべての忠実な人々にすぐに手を差し伸べる能力である。国家の祈りの日が近づいているが、この日の説教は中央国教会によって部分的に指示されるのが通例である。今後数年間、どのような説教に力を注ぐべきだろうか？"
+ protestantism_events.9.d:0 "国教会を持つことの大きな強みの一つは、我が国のすべての信者に対し一斉に手を差し伸べることができる点にある。国民祈祷日が近づいており、この日の説教で中央国教会が一部を指示するのが慣例となっている。今後数年間、どのような説教に力を注ぐべきだろうか？"
  protestantism_events.9.a:0 "我々が今享受している平和への感謝。"
  protestantism_events.9.b:0 "我々の戦争の正当化。"
  protestantism_events.9.c:0 "信仰の純潔。"
