Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -5203,7 +5203,7 @@
  flavor_gbr.117.desc:0 "カトリックであるにもかかわらず、ジェームズ2世は幅広い支持を受けてイングランド王、スコットランド王、アイルランド王になりましたが、彼の推定相続人がプロテスタントの娘メアリーであったため、それは短期的の合意だと見なされていました。彼女自身はオランダ共和国の事実上の統治者であるオラニエ公ウィレムと結婚しており、オランダ共和国自体はプロテスタントの国家でした。メアリーに取って代わる男子継承者の誕生はカトリック王朝の可能性を広げる扉を開き、数人のプロテスタント司祭の告発が多方面からの反カトリックの反対に拍車をかけました。\nこのことがジェームズの権威を傷つけ、イングランドの政治家連合はウィレムに軍事介入するよう招き入れ、プロテスタント信仰を保護させました。"
  flavor_gbr.117.a:0 "ウィリアムよ助けてくれ、あなたが我々の唯一の希望だ。"
  flavor_gbr.118.t:0 "第五王国派"
- flavor_gbr.118.desc:0 "第五王国派は、四つの君主制が第五の君主制に先行するものであり、その第五の君主制は地上に神の国を確立する国家である、という信念を中心とするプロテスタント教団の名前です。彼らは最近の出来事が第四の君主制の終焉を伝えるものであり、[Root.Monarch.GetName][Root.Monarch.GetTitle]の支配が実は第五の君主制の到来を妨げていると主張しています。彼らは自分たちを「救済された者」と考え、「聖人」を自称し、民衆をキリストの再臨に備える意図で行動しているということになっています。実際には大規模な運動ではありませんが、彼らの十分に大きい影響範囲は、その集団の一部が軍事行動が正当化されると信じているという事実と相まって、無視できない集団になっています。\n\n極端ではありますが、大っぴらであろうと秘密裏であろうと、彼らの信仰が既に一部の政府の非常に強力で影響力のある一団の興味を引いていることは否定できません。特にキリストの再臨が我々の前に起こりえる可能性が実際にあるならば、ただ彼らを無視してしまうのは愚かなことでしょう。"
+ flavor_gbr.118.desc:0 "第五王国派は、四つの君主制が第五の君主制に先行するものであり、その第五の君主制は地上に神の国を確立する国家である、という信念を中心とするプロテスタント教団の名前です。彼らは最近の出来事が第四の君主制の終焉を伝えるものであり、[Root.Monarch.GetName][Root.Monarch.GetTitle]の支配が実は第五の君主制の到来を妨げていると主張しています。彼らは自分たちを「救済された者」と考え、「聖人」を自称し、民衆をキリストの再臨に備える意図で行動しているということになっています。実際には大規模な運動ではありませんが、彼らの十分に大きい影響範囲は、その集団の一部が軍事行動が正当化されると信じているという事実と相まって、無視できない集団になっています。\n\n極端ではありますが、大っぴらであろうと秘密裏であろうと、彼らの信仰が既に一部の政府の非常に強力で影響力のある一団の興味を引いていることは否定できません。特にキリストの再臨が我々の前に起こりうる可能性が実際にあるならば、ただ彼らを無視してしまうのは愚かなことでしょう。"
  flavor_gbr.118.a:0 "神のしるしに従うのだ。"
  flavor_gbr.118.a.tt:0 "第五王国派が§Y[Root.GetUsableName]§!の権力を掌握しつつあります…\n§R§Y[Root.GetUsableName]§!は強力だが危険を伴う政府制度を利用できるようになります。この政府制度によって自国は絶えず闘争を矯正されます。終末が訪れる前に1,000州の征服に失敗すると、自国の破滅を引き起こすでしょう！§!"
  flavor_gbr.118.b:0 "こんな狂った思想を受け入れるべきではない。"
