--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2447,7 +2447,7 @@
  flavor_brapru.26.d:0 "我々のような国家には、優れた統治者、法律家、学者に対する飽くなき渇望がある。法制度は、特に維持されるだけでなく、時には改革、拡大または再利用される必要がある。そのような時代には、才能のある人たちに出会うのは素晴らしいことだ。ザムエル・フォン・コクツェイについて、我々はそのような人物を持っていると信じている。20代前半から法律の教授と裁判官として活躍しているフォン・コクツェイは、強く公正で正義の法的手段のために、[Root.Monarch.GetName]を含めたすべての人々に立ち向かう高潔さと誠実さを持っている。"
  flavor_brapru.26.a:0 "雇用しよう！"
  flavor_brapru.27.t:0 "[Root.GetAdjective]の法制度"
- flavor_brapru.27.d:0 "我々の[Root.GovernmentName]が拡大し、年を経て複雑に広範に重なり合ったことで、しばしば一貫性のない法的慣行があらゆる支配から逸脱し始めた。法的事実は、場合によっては法律の確実性を保証することが不可能な規則に従って、地方の、しばしば私的に雇用される裁判官によって決定されている。封建制、帝国、および伝統的な管轄区域の迷宮によって無力化されている裁判所もあれば、法律の権威を毀損することによって裁判官が財産を稼ぐのを見ている人もいる。\nにもかかわらず、我が国の教育機関は、多くの法律上の精神と学者を生み出してきた。我々の新しく、統一された、一貫性のある、そして十分に規制された法制度を計画するため、彼らを使う時が来た。実績に基づいて雇用された、国家の利益となる公平な裁判官、重複する管轄区域の縮小、明確な控訴の階層によって、訴訟の効率的な取り扱いを保証するため、[Root.GetAdjective]の裁判所を改革しよう。"
+ flavor_brapru.27.d:0 "我々の[Root.GovernmentName]が拡大し、老朽化するにつれて、複雑で、広範に重複し、しばしば矛盾する法的慣行が、制御不能なまでに拡大している。法的事実は多くの場合、しばしば私的に雇用されている地元の裁判官によって、訴訟ごとに大きく異なる規則に従って決定されるため、いかなる形の法的確実性も保証することは不可能である。封建的、帝国的、伝統的な管轄区域の迷宮によって無力化されている裁判所がある一方で、法律の権威を腐敗させることによって富を得ている裁判官も見られる。\nにもかかわらず、我が国の教育機関は、多くの法的知識と学者を生み出してきた。今こそ彼らを活用し、自国のために統一された、一貫性のある、そして十分に規制された、新しい法制度を計画するときである。[Root.GetAdjective]の裁判所を改革し、効率的な訴訟処理、国家から報酬を受け取り実績に基づいて雇用された公平な裁判官、重複する管轄区域の縮小、控訴の明確な階層を確保しよう。"
  flavor_brapru.27.a:0 "よし！神の名の下に始めよう！"
  flavor_brapru.27.b:0 "立法手続きやその他の形式的行為をしている時間はない…"
  flavor_brapru.28.t:0 "ポツダム勅令"
